# smart-cam-manager

./: .env.example  .env.windows-minipc.example  .gitignore  CLAUDE.md  Makefile  app.py  auth.py  blackframe.ps1  classification.py  continuous_recording.py  install-windows.bat  motion_events.py  notifications.py  pyproject.toml  recording.py  requirements.txt  restart-blackframe.bat  runtime_config.py  service_layer.py  tapo_rtsp.py  telegram_commands.py
automation/: __init__.py  devices.py  dispatcher.py  engine.py  events.py  registry.py  rules.example.yaml  rules.py
config/: performance_profiles.yaml
config/automation/: rules.example.yaml  rules.yaml  tuya_device_names.example.yaml  tuya_device_names.yaml
deploy/: blackframe.iss  blackframe.service  com.blackframe.app.plist  gunicorn.conf.py  post_install.ps1  serve_waitress.py  uninstall.ps1
docs/: CONFIGURAZIONE_AVVIO_HARDENING.md  accesso_lan_minipc.md  automation_tuya_fase0.md  gestione_servizio.md  installazione_multi_famiglia.md  installazione_windows.md  installer_windows.md  person_pet_detection_benchmark.md  remote_viewing_guide.md  report-mini-pc-windows.md  sviluppo_remoto_cursor_ssh.md  videosorveglianza_features.md
routes/: __init__.py  cameras.py  motion.py  ptz.py  video.py
scripts/: __init__.py  agent_benchmark_cases.json  benchmark_agent.py  bf.py  bootstrap_windows.sh  build_windows_installer.ps1  check_prerequisites.py  env_profiles.py  fetch_model.py  install_ollama_service.ps1  install_ubuntu.sh  install_windows.ps1  restart_service.ps1  runtime_paths.py  setup_config.py  start_ollama_if_needed.bat  telegram_setup.py  tuya_import_registry.py  tuya_poc.py  windows_service.py  windows_wizard.py
scripts/windows/: blackframe.ps1  install-windows.bat  start_blackframe.bat
src/blackframe/: __init__.py  __main__.py  app.py  capabilities.py  classification.py  continuous_recording.py  envutil.py  motion_events.py  notifications.py  performance_profiles.py  recording.py  runtime_config.py  service_layer.py  tapo_rtsp.py  telegram_commands.py
static/: styles.css
static/js/: api.js  camera-ui.js  live-ui.js  (+5 more)
templates/: cameras.html  dashboard.html  index.html  login.html  viewer.html
tests/: test_agent_answer.py  test_agent_context.py  test_agent_fastpath.py  test_agent_intent.py  test_agent_residency.py  test_agent_routes.py  test_agent_transcript.py  test_app.py  test_automation_devices.py  test_automation_dispatcher.py  test_automation_engine.py  test_automation_routes.py  test_automation_rules_store.py  test_capabilities.py  test_classification.py  test_commands_naming.py  test_commands_registry.py  test_entity_resolver.py  test_env_profiles.py  test_features.py  test_ollama_client.py  test_performance_profiles.py  test_runtime_paths.py  test_setup_config.py  test_tuya_import.py  test_windows_service.py
(+55 files in other folders)
