[tool.poetry]
name = "cam"
version = "0.1.0"
description = "Tapo camera control and motion app"
authors = ["nico"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "*"
python-dotenv = "*"
opencv-python = "*"
onvif-zeep = "*"
cryptography = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
