[tool.poetry]
name = "cam"
version = "0.1.0"
description = "Tapo camera control and motion app"
authors = ["nico"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "*"
python-dotenv = "*"
opencv-python = "*"
onvif-zeep = "*"
cryptography = "*"
gunicorn = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "^9.0.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
